[package]
name = "valkyrie-markup"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
author = ["Alyx Shang"]
description= "A library to parse Valkyrie Markup text."
homepage = "https://github.com/alyxshang/valkyrie"
repository = "https://github.com/alyxshang/valkyrie"
readme = "README.markdown"

[[bin]]
name = "omuc"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
